Agenda actualizada con cambios solicitados

--- a/biotecnologia.html
+++ b/biotecnologia.html
@@ -82,7 +82,7 @@
         <div class="row">
                 <h1 align="">Biotecnología</h1>
                 <hr>
-            <div class=" table-alt col-lg-offset-1 col-lg-7 ">    
+            <div class=" table-alt col-lg-offset-1 col-lg-7 col-md-7 ">    
                 <div class="row test-table">
                     <div class="bio-table col-lg-4">
                     <h2>Prueba</h2>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <div class=" col-lg-offset-1 col-lg-1 hidden-xs"><img src="img/bio.jpg"  align="center" class="img-responsiv" alt="biotecnologia"></div>
+            <div class=" col-lg-offset-1 col-lg-1 col-md-1 hidden-xs"><img src="img/bio.jpg"  align="center" class="img-responsiv" alt="biotecnologia"></div>
             <!-- /.col-lg-12 -->
         </div>
         <!-- /.row -->
